Redesigned the layout, partially functioning buttons, and new empty html page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,19 +4,21 @@ body{
 	background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
 }
 div {
-	margin: 3cm 7cm 2cm;
-	width: 430px;
+	margin: 3cm 3.6cm 2cm;
+	width: 620px;
     height: 100px;
-	background-color: #39c680;
-	opacity: 0.7;
+	background-color: #1d6351;
+	opacity: 0.8;
 	color: white;
 	padding-top: 2cm;
-	padding-left: 3cm;
+	padding-left: 1cm;
 	padding-right: 4cm;
 	padding-bottom: 3cm;
-	
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.17);
+
 }
 h1 {
     font: 40px Verdana, sans-serif;
@@ -27,28 +29,48 @@ p {
 
 figure{
 	float:right;
-	margin: -9.7cm 7cm 1cm 1cm ;
+	margin: -9.6cm 4cm 1cm 1cm ;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.17);
+}
+figure:hover {
+	opacity: 0.9;
 }
 
-ul {
-    list-style-type: none;
-    margin: 1cm 7cm 2cm ;
-    padding: 1px;
-    background-color: #39c680;
-	
-}
-
-li {
-    float: left;
-}
-
-li  {
-    display: block;
+.button{
+	display: block;
+	height: 60px;
+	width: 100px;
+	border-radius: 100%;
+	background-color: #1d6351;
     color: white;
-    text-align: center;
-    padding: 1.3cm 2cm 1cm;
+	text-align: center;
+    padding: 50px 20px 20px 20px;
+	text-decoration: none;
+    font-size: 23px;
+	display: inline-block;
+	font-family: Calibri;
+	margin: 0px 2px 2px 130px;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.17);
 }
-
-li a:hover {
-    background-color: #111;
+.button1{
+	display: block;
+	height: 60px;
+	width: 100px;
+	border-radius: 100%;
+	background-color: #1d6351;
+    color: white;
+	text-align: center;
+    padding: 50px 20px 20px 20px;
+	text-decoration: none;
+    font-size: 23px;
+	display: inline-block;
+	font-family: Calibri;
+	margin: 0px 0px 0px 60px;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.17);
+}
+.button:hover {
+    background-color: #6199d1;
+}
+.button1:hover {
+    background-color: #6199d1;
 }
