--- a/styles/styles1.css
+++ b/styles/styles1.css
@@ -42,7 +42,7 @@ figure.image{
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.17);
 }
 figure:hover {
-	opacity: 0.9;
+	transition: .3s ease;
 }
 
 figure.arrow{
@@ -120,17 +120,21 @@ figure.arrow1{
 .button:hover {
     background-color: #00b386;
 	transform: scale(1.2);
+	transition: .3s ease;
 }
 .button1:hover {
     background-color: #00b386;
 	transform: scale(1.2);
+	transition: .3s ease;
 }
 .button2:hover {
     background-color: #00b386;
 	transform: scale(1.2);
+	transition: .3s ease;
 }
 .button3:hover {
     background-color: #00b386;
 	transform: scale(1.2);
+	transition: .3s ease;
 }
 
