modifications and added minor changes on skills.html

--- a/styles/style_contact.css
+++ b/styles/style_contact.css
@@ -22,7 +22,7 @@ figure:hover.mobile{
 	transform: scale(1.1);
 	transition: .2s ease;
 }
-figure:hover.mai1{
+figure:hover.mail{
 	transform: scale(1.1);
 	transition: .2s ease;
 }
