added content for skills and small modifications

--- a/styles/style_skills.css
+++ b/styles/style_skills.css
@@ -19,3 +19,7 @@ p.multi_description{
 	padding-right: 20px;
 	font-size: 34px;
 }
+figure:hover.multi{
+	transform: scale(1.1);
+	transition: .2s ease;
+}
