--- a/styles/style_skills2.css
+++ b/styles/style_skills2.css
@@ -4,6 +4,13 @@ p.prog_description{
 	padding-top: 20px;
 	font-size: 34px;
 }
+p.prog_content{
+	padding-top: 40px;
+}
 figure.prog{
 	margin: 1cm 0cm 1cm 0.1cm;
+}
+figure:hover.prog{
+	transform: scale(1.1);
+	transition: .2s ease;
 }
