--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 body{
 	background-image: url('../images/beef.jpg');
 	background-position: center;
@@ -6,7 +5,7 @@ body{
     background-size: cover;
 
 }
-div {
+/* div {
 	margin: 3cm 3.6cm 2cm;
 	width: 620px;
     height: 100px;
@@ -19,6 +18,19 @@ div {
 	padding-bottom: 3cm;
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.17);
 
+} */
+div.description{
+	margin: 3cm 3.6cm 2cm;
+	width: 620px;
+    height: 100px;
+	background-color: #1d6351;
+	opacity: 0.8;
+	color: white;
+	padding-top: 2cm;
+	padding-left: 1cm;
+	padding-right: 4cm;
+	padding-bottom: 3cm;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.17);
 }
 h1 {
     font: 40px Verdana, sans-serif;
@@ -29,7 +41,7 @@ p {
 
 figure{
 	float:right;
-	margin: -9.6cm 4cm 1cm 1cm ;
+	margin:-9.7cm 3cm 1cm;
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.17);
 }
 figure:hover {
