--- a/styles/redirect.css
+++ b/styles/redirect.css
@@ -6,6 +6,7 @@
 .image {
   display: block;
   width: 355px;
+  border-radius: 5%;
   height: auto;
 }
 
@@ -19,9 +20,11 @@
   width: 0;
   height: 100%;
   transition: .5s ease;
+  border-radius: 5%;
 }
 
 .container:hover .overlay {
   width: 355px;
   left: 0;
+  border-radius: 5%;
 }
