--- a/me/my_styles/me2.css
+++ b/me/my_styles/me2.css
@@ -2,7 +2,7 @@ div.holder2{
 	position: absolute;
 	left: 50px;
 	top:170px;
-	width: 1000px;
+	width: 1400px;
     height: 550px;
 	background-color: #eda65e;
 	opacity: 0.8;
@@ -16,4 +16,32 @@ div.description{
 	padding-left: 1cm;
 	padding-right: 4cm;
 	padding-bottom: 0.3cm;
+}
+.container2 {
+  position: relative;
+  width: 100px;
+}
+
+.image2 {
+  display: block;
+  width: 100px;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: none;
+  overflow: hidden;
+  width: 0;
+  height: 100%;
+  transition: .8s ease;
+  border-radius: 5%;
+}
+
+.container:hover .overlay {
+  width: 500px;
+  left: 0;
 }
