--- a/me/my_styles/me2.css
+++ b/me/my_styles/me2.css
@@ -25,6 +25,10 @@ div.holder2{
 	opacity: 0.8;
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3), 0 6px 20px 0 rgba(0,0,0,0.17);
 }
+figure.home{
+	float: left;
+	margin: -17.9cm 1cm 10cm 36cm;
+}
 figure.content{
 	margin: 1.8cm;
 }
