--- a/me/my_styles/me.css
+++ b/me/my_styles/me.css
@@ -26,20 +26,20 @@ div.description{
 }
 figure.paw{
 	float:right;
-	margin: 11cm 18.8cm 1cm 11cm ;
+	margin: 13.2cm 23.3cm 1cm 11cm ;
 }
 figure.home{
 	float: right;
-	margin: -3.3cm -31.8cm 1cm 1cm;
+	margin: -3cm -34cm 1cm 1cm;
 }
 .container {
   position: relative;
-  width: 100px;
+  width: 50px;
 }
 
 .image {
   display: block;
-  width: 100px;
+  width: 50px;
   height: auto;
 }
 
@@ -52,7 +52,7 @@ figure.home{
   overflow: hidden;
   width: 0;
   height: 100%;
-  transition: .8s ease;
+  transition: 2s ease;
   border-radius: 5%;
 }
 
