--- a/me/my_styles/me.css
+++ b/me/my_styles/me.css
@@ -29,8 +29,8 @@ figure.paw{
 	margin: 13.2cm 23.3cm 1cm 11cm ;
 }
 figure.home{
-	float: right;
-	margin: -3cm -34cm 1cm 1cm;
+	float: left;
+	margin: -2.87cm 1cm 1cm 37.4cm;
 }
 .container {
   position: relative;
